--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
     "resolveJsonModule": true,
     "jsx": "react-jsx",
     "outDir": "./dist",
-    "typeRoots": ["./@types","./node_modules/@types"]
+    "typeRoots": ["./node_modules/@types", "@types"]
   },
   "include": [
     "./src/**/*"
